--- a/pages/page.html
+++ b/pages/page.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Page</title>
+    <title>Info Zona</title>
     <link rel="stylesheet" href="../styles/default.css">
     <script src="../scripts/main.js"></script>
 </head>
 
 <body>
 
-    <a href="../index.html">home</a>
+<div class="header">
+    </div>   
     
 </html>
