html-basis-flex

--- a/index.html
+++ b/index.html
@@ -10,29 +10,74 @@
 
 <body>
 
-    <!-- page content -->
-    <div class="header">
-        <nav>
-            <ul>
-                <li class="menu-logo"><a href="#foo">logo</a></li>
-                <li class="menu-item"><a href="#bar">Naslovnica</a></li>
-                <li class="menu-item"><a href="#baz">Kalendar</a></li>
-                <li class="menu-item"><a href="#foo">Vijesti</a></li>
-                <li class="menu-item"><a href="#bar">Sudjeluj</a></li>
-                <li class="menu-face"><a href="#baz">fejs</a></li>
-                <li class="menu-twit"><a href="#baz">twitter</a></li>
-            </ul>
-        </nav>
-    </div>
-    
-    <div class="content">
-        
-        <div class="search">
- </div>
-         <div class="track">
- </div>
+    <!-- HEADER -->
+    <div class="header-container">
+        <div class="header">
+            <div class="header-logo">
+                <h1>InfoZona</h1>
+            </div>
+
+            <nav class="header-navigation">
+                <ul>
+                    <li><a href="#">Naslovnica</a></li>
+                    <li><a href="#">Kalendar</a></li>
+                    <li><a href="#">Vijesti</a></li>
+                    <li><a href="#">Sudjeluj</a></li>
+                </ul>
+            </nav>
+
+            <div class="header-social">
+                <ul>
+                    <li class="header-facebook"><a href="#">Facebook</a></li>
+                    <li class="header-twitter"><a href="#">Twitter</a></li>
+                </ul>
+            </div>
         </div>
-    <a href="./pages/page.html">page</a>
+    </div>
+
+    <!-- CONTENT -->
+    <div class="content-container">
+        <div class="content">
+            <div class="content-toolbar">
+                <div class="items">
+                    items
+                </div>
+                <div class="search">
+                    search
+                </div>
+            </div>
+
+            <div class="content-main">
+                <div class="main-news">
+                    glavnesdawae
+                </div>
+                <div class="sub">
+                    <div class="sub-news">
+                        nevaznije
+                    </div>
+                    <div class="sub-news">
+                        nevaznije
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- FOOTER -->
+    <div class="footer-container">
+        <div class="footer">
+            <div class="footer-item">
+                column 1
+            </div>
+            <div class="footer-item">
+                column 2
+            </div>
+            <div class="footer-item">
+                column 3
+            </div>
+        </div>
+    </div>
 
 </body>
 
