--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             </div>
 
             <div class="content-main">
+                <div class="main">
                 <div class="main-news">
                     glavnesdawae
+                </div>
                 </div>
                 <div class="sub">
                     <div class="sub-news">
@@ -61,6 +63,27 @@
                 </div>
             </div>
 
+          <div class="main-calendar">
+              <div class="calendar-content-main">
+                  dsadwae
+                  </div>
+                  <div class="calendar-content-main">
+                  dsadwae
+                  </div>
+                  <div class="calendar-content-main">
+                  dsadwae
+                  </div>
+                  <div class="calendar-content-main">
+                  dsadwae
+                  </div>
+                  <div class="calendar-content-main">
+                  dsadwae
+                  </div>
+                  <div class="calendar-content-main">
+                  dsadwae
+                  </div>
+                  
+              </div>
         </div>
     </div>
 
