basic-module-done

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,400italic' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <title>title</title>
     <link rel="stylesheet" href="./styles/default.css">
@@ -40,50 +41,67 @@
         <div class="content">
             <div class="content-toolbar">
                 <div class="items">
-                    items
+                 <h1>Vijesti/Linkovi/Svi tekstovi</h1>
                 </div>
                 <div class="search">
-                    search
+<div class="Field Field--is-search">
+  <input
+    type="search"
+    name="search"
+    placeholder="Vijesti..."
+    class="SearchBox-query"/>
+
+  <button
+    type="submit"
+    class="Btn SearchBox-submitBtn">Search</button>
+</div>
                 </div>
             </div>
 
             <div class="content-main">
                 <div class="main">
-                <div class="main-news">
-                    glavnesdawae
-                </div>
-                </div>
-                <div class="sub">
-                    <div class="sub-news">
-                        nevaznije
+                    <div class="main-news">
+                        <img src="../images/content-slike/newyork.jpg">
+                        <h1>New York!</h1>
+                        <p>Putujte u New York s pobjedom na natječaju!</p>
+                       
                     </div>
-                    <div class="sub-news">
-                        nevaznije
+                    <div class="sub">
+                        <div class="sub-news">
+                            <img src="../images/content-slike/fresh.jpg">
+                            <h1>Eat the Fresh!</h1>
+                            <p>opis vijesti</p>
+                        </div>
+                        <div class="sub-news">
+                            <img src="../images/content-slike/fresh.jpg">
+                            <h1>Eat the Fresh!</h1>
+                            <p>opis vijesti</p>
+                        </div>
                     </div>
+                </div>
+
+                <div class="main-calendar">
+                    <div class="calendar-content-main">
+                        dsadwae
+                    </div>
+                    <div class="calendar-content-main">
+                        dsadwae
+                    </div>
+                    <div class="calendar-content-main">
+                        dsadwae
+                    </div>
+                    <div class="calendar-content-main">
+                        dsadwae
+                    </div>
+                    <div class="calendar-content-main">
+                        dsadwae
+                    </div>
+                    <div class="calendar-content-main">
+                        dsadwae
+                    </div>
+
                 </div>
             </div>
-
-          <div class="main-calendar">
-              <div class="calendar-content-main">
-                  dsadwae
-                  </div>
-                  <div class="calendar-content-main">
-                  dsadwae
-                  </div>
-                  <div class="calendar-content-main">
-                  dsadwae
-                  </div>
-                  <div class="calendar-content-main">
-                  dsadwae
-                  </div>
-                  <div class="calendar-content-main">
-                  dsadwae
-                  </div>
-                  <div class="calendar-content-main">
-                  dsadwae
-                  </div>
-                  
-              </div>
         </div>
     </div>
 
