--- a/pages/page.html
+++ b/pages/page.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8">
     <title>Info Zona</title>
     <link rel="stylesheet" href="../styles/default.css">
-    <script src="../scripts/main.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-<div class="header">
-    </div>   
-    
+    <div class="header">
+    </div>
+    <script src="../scripts/main.js"></script>
+
 </html>
