--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
             <div class="content-main">
                 <div class="main">
                     <div class="main-news">
-                        <img src="../images/content-slike/newyork.jpg">
+                        <img src="images/content-slike/newyork.jpg">
                         <h1>New York!</h1>
                         <p>Putujte u New York s pobjedom na natječaju!</p>
 
                     </div>
                     <div class="sub">
                         <div class="sub-news">
-                            <img src="../images/content-slike/fresh.jpg">
+                            <img src="images/content-slike/fresh.jpg">
                             <h1>Eat the Fresh!</h1>
                             <p>opis vijesti</p>
                         </div>
                         <div class="sub-news">
-                            <img src="../images/content-slike/fresh.jpg">
+                            <img src="images/content-slike/fresh.jpg">
                             <h1>Eat the Fresh!</h1>
                             <p>opis vijesti</p>
                         </div>
