--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <title>title</title>
     <link rel="stylesheet" href="./styles/default.css">
@@ -18,7 +19,7 @@
             <a href="#" class="header-toggle"></a>
 
             <div class="header-logo">
-                <h1>InfoZona</h1>
+                <a href="#"><h1>InfoZona</h1></a>
             </div>
 
             <nav class="header-navigation">
@@ -32,8 +33,8 @@
 
             <div class="header-social">
                 <ul>
-                    <li class="header-facebook"><a href="#">Facebook</a></li>
-                    <li class="header-twitter"><a href="#">Twitter</a></li>
+                    <li class="header-facebook"><a href="#"><h1>Facebook</h1></a></li>
+                    <li class="header-twitter"><a href="#"><h1>Twitter</h1></a></li>
                 </ul>
             </div>
         </div>
@@ -78,23 +79,29 @@
                 </div>
 
                 <div class="main-calendar">
-                    <div class="calendar-content-main">
-                        dsadwae
+                    <div class="calendar-content-main-art">
+                        <h2>Povismo i sunko</h2>
+                        <p>Etnografski muzej</p>
                     </div>
                     <div class="calendar-content-main">
-                        dsadwae
+                        <h2>Gdje je Jasenaš?</h2>
+                        <p>Etnografski muzej</p>
                     </div>
                     <div class="calendar-content-main">
-                        dsadwae
+                        <h2>Povismo i sunko</h2>
+                        <p>Etnografski muzej</p>
+                    </div>
+                    <div class="calendar-content-main-rest">
+                        <h2>Gdje je Jasenaš?</h2>
+                        <p>Etnografski muzej</p>
                     </div>
                     <div class="calendar-content-main">
-                        dsadwae
+                        <h2>Povismo i sunko</h2>
+                        <p>Etnografski muzej</p>
                     </div>
                     <div class="calendar-content-main">
-                        dsadwae
-                    </div>
-                    <div class="calendar-content-main">
-                        dsadwae
+                        <h2>Gdje je Jasenaš?</h2>
+                        <p>Etnografski muzej</p>
                     </div>
 
                 </div>
