--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700&subset=latin,latin-ext" rel="stylesheet"
+        type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700&subset=latin,latin-ext" rel="stylesheet"
+        type="text/css">
     <meta charset="utf-8">
     <title>title</title>
     <link rel="stylesheet" href="./styles/default.css">
@@ -24,8 +26,8 @@
 
             <nav class="header-navigation">
                 <ul>
-                    <li><a href="#">Naslovnica</a></li>
-                    <li><a href="#">Kalendar</a></li>
+                    <li><a href="index.html">Naslovnica</a></li>
+                    <li><a href="./pages/page.html">Kalendar</a></li>
                     <li><a href="#">Vijesti</a></li>
                     <li><a href="#">Sudjeluj</a></li>
                 </ul>
@@ -45,7 +47,7 @@
         <div class="content">
             <div class="content-toolbar">
                 <div class="items">
-                    <h1>Vijesti/Linkovi/Svi tekstovi</h1>
+                    <a href="#"><h1>Vijesti/Linkovi/Svi tekstovi</h1></a>
                 </div>
                 <div class="search">
                     <div class="Field Field--is-search">
@@ -108,18 +110,43 @@
             </div>
         </div>
     </div>
-
     <!-- FOOTER -->
     <div class="footer-container">
         <div class="footer">
             <div class="footer-item">
-                column 1
+                <nav class="footer-navigation">
+                    <ul>
+                        <li class="footer-first"><a href="#">Čekamo odgovor</a></li>
+                        <li><a href="#">Odgovorena</a></li>
+                        <li><a href="#">Neodgovorena</a></li>
+                        <li><a href="#">Arhiva</a></li>
+                        <li><a href="#">Žugaj sam!</a></li>
+                    </ul>
+                </nav>
             </div>
             <div class="footer-item">
-                column 2
+                <nav class="footer-navigation">
+                    <ul>
+                        <li class="footer-first"><a href="#">Podržavaju nas</a></li>
+                        <li><a href="#">nzrcd</a></li>
+                        <li><a href="#">terrakom hosting</a></li>
+                        <li><a href="#">radio split</a></li>
+                        <li><a href="#">h-alter</a></li>
+                        <li><a href="#">radio Sunce</a></li>
+                        <li><a href="#">Cenzura+</a></li>
+                    </ul>
+                </nav>
             </div>
             <div class="footer-item">
-                column 3
+                <nav class="footer-navigation">
+                    <ul>
+                        <li class="footer-first"> <a href="#">Infozona.hr</a></li>
+                        <li><a href="#">Impressum</a></li>
+                        <li><a href="#">O portalu</a></li>
+                        <li><a href="#">Pravila korištenja</a></li>
+                        <li><a href="#">kontakt</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
