--- a/pages/page.html
+++ b/pages/page.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700&subset=latin,latin-ext" rel="stylesheet"
+        type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700&subset=latin,latin-ext" rel="stylesheet"
+        type="text/css">
     <meta charset="utf-8">
-    <title>Info Zona</title>
+    <title>title</title>
     <link rel="stylesheet" href="../styles/default.css">
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
         crossorigin="anonymous"></script>
@@ -11,8 +15,146 @@
 
 <body>
 
-    <div class="header">
+    <!-- HEADER -->
+    <div class="header-container">
+        <div class="header">
+            <a href="#" class="header-toggle"></a>
+
+            <div class="header-logo">
+                <a href="#"><h1>InfoZona</h1></a>
+            </div>
+
+            <nav class="header-navigation">
+                <ul>
+                    <li><a href="../index.html">Naslovnica</a></li>
+                    <li><a href="./pages/page.html">Kalendar</a></li>
+                    <li><a href="#">Vijesti</a></li>
+                    <li><a href="#">Sudjeluj</a></li>
+                </ul>
+            </nav>
+
+            <div class="header-social">
+                <ul>
+                    <li class="header-facebook"><a href="#"><h1>Facebook</h1></a></li>
+                    <li class="header-twitter"><a href="#"><h1>Twitter</h1></a></li>
+                </ul>
+            </div>
+        </div>
     </div>
+
+    <!-- CONTENT -->
+    <div class="content-container">
+        <div class="content">
+            <div class="content-toolbar">
+                <div class="items">
+                    <a href="#"><h1>Dan/Tjedan/Mjesec</h1></a>
+                </div>
+                <div class="search">
+                    <div class="Field Field--is-search">
+                        <input type="search" name="search" placeholder="Vijesti..." class="SearchBox-query" />
+
+                        <button type="submit" class="Btn SearchBox-submitBtn">Search</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-main">
+
+
+                <div class="main-calendar">
+                    <div class="calendar-content-main-art">
+                        <h2>Povismo i sunko</h2>
+                        <p>Etnografski muzej</p>
+                        <p><div class="hour">16:20</div></p>
+                    </div>
+                    <div class="calendar-content-main">
+                        <h2>Gdje je Jasenaš?</h2>
+                        <p>Etnografski muzej</p>
+                        <p><div class="hour">16:20</div></p>
+                    </div>
+                    <div class="calendar-content-main">
+                        <h2>Povismo i sunko</h2>
+                        <p>Etnografski muzej</p>
+                        <p><div class="hour">16:20</div></p>
+                    </div>
+                    <div class="calendar-content-main-rest">
+                        <h2>Gdje je Jasenaš?</h2>
+                        <p>Etnografski muzej</p>
+                        <p><div class="hour">16:20</div></p>
+                    </div>
+                    <div class="calendar-content-main">
+                        <h2>Povismo i sunko</h2>
+                        <p>Etnografski muzej</p>
+                        <p><div class="hour">16:20</div></p>
+                    </div>
+                    <div class="calendar-content-main">
+                        <h2>Gdje je Jasenaš?</h2>
+                        <p>Etnografski muzej</p>
+                        <p><div class="hour">16:20</div></p>
+                    </div>
+                    <div class="calendar-content-main-art">
+                        <h2>Povismo i sunko</h2>
+                        <p>Etnografski muzej</p>
+                        <p><div class="hour">16:20</div></p>
+                    </div>
+                    <div class="calendar-content-main-art">
+                        <h2>Povismo i sunko</h2>
+                        <p>Etnografski muzej</p>
+                        <p><div class="hour">16:20</div></p>
+                    </div>
+                    <div class="calendar-content-main">
+                        <h2>Povismo i sunko</h2>
+                        <p>Etnografski muzej</p>
+                        <p><div class="hour">16:20</div></p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- FOOTER -->
+    <div class="footer-container">
+        <div class="footer">
+            <div class="footer-item">
+                <nav class="footer-navigation">
+                    <ul>
+                        <li class="footer-first"><a href="#">Čekamo odgovor</a></li>
+                        <li><a href="#">Odgovorena</a></li>
+                        <li><a href="#">Neodgovorena</a></li>
+                        <li><a href="#">Arhiva</a></li>
+                        <li><a href="#">Žugaj sam!</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-item">
+                <nav class="footer-navigation">
+                    <ul>
+                        <li class="footer-first"><a href="#">Podržavaju nas</a></li>
+                        <li><a href="#">nzrcd</a></li>
+                        <li><a href="#">terrakom hosting</a></li>
+                        <li><a href="#">radio split</a></li>
+                        <li><a href="#">h-alter</a></li>
+                        <li><a href="#">radio Sunce</a></li>
+                        <li><a href="#">Cenzura+</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-item">
+                <nav class="footer-navigation">
+                    <ul>
+                        <li class="footer-first"> <a href="#">Infozona.hr</a></li>
+                        <li><a href="#">Impressum</a></li>
+                        <li><a href="#">O portalu</a></li>
+                        <li><a href="#">Pravila korištenja</a></li>
+                        <li><a href="#">kontakt</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+
     <script src="../scripts/main.js"></script>
+
+</body>
 
 </html>
